--- a/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewConsumUtilitate.xaml
@@ -34,6 +34,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -47,7 +48,8 @@
             IsEnabled="True"></toolkit:ListPicker>
             <toolkit:DatePicker Grid.Row="1" Grid.Column="1" Value="{Binding Path=ObiectInBinding.DataConsum, Mode=TwoWay }" Name="dtpIndex"  ></toolkit:DatePicker>
             <TextBox InputScope="Number" Name="txtIndexUtil"  Grid.Row="2" Grid.Column="1" Text="{Binding Path=ObiectInBinding.IndexUtilitate, Mode=TwoWay}"></TextBox>
-            <ListBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Path=Erori}">
+            <Button Content="Capture" Grid.Row="3" Click="CaptureClick"></Button>
+            <ListBox Grid.Row="4" Grid.Column="1" ItemsSource="{Binding Path=Erori}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -56,6 +58,13 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+           
+        </Grid>
+        <Grid Grid.Row="1">
+            <StackPanel Height="150" Width="150" Margin="20" Background="AliceBlue">
+                <Image Name="img" Source="{Binding Path=ImagePath, Mode=TwoWay}" Width="150" Height="150" Stretch="UniformToFill" >
+                </Image>
+            </StackPanel>
         </Grid>
     </Grid>
 
