--- a/HomeHelperPhone/Views/EditViewUtilitate.xaml
+++ b/HomeHelperPhone/Views/EditViewUtilitate.xaml
@@ -37,17 +37,25 @@
             <RowDefinition Height="Auto"></RowDefinition>
        </Grid.RowDefinitions>    
        <Grid.ColumnDefinitions>
-           <ColumnDefinition Width="Auto"></ColumnDefinition>
            <ColumnDefinition Width="*"></ColumnDefinition>
        </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <TextBlock Grid.Row="1" Margin="10" Text="{Binding Path=LocalizedResources.lblUnitateDeMasuraText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <TextBlock Grid.Row="2" Margin="10" Text="{Binding Path=LocalizedResources.lblValoareInitialaText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <TextBlock Grid.Row="3" Margin="10" Text="{Binding Path=LocalizedResources.lblDataIndexInitialText,Source={StaticResource LocalizedStrings}}"></TextBlock>
-            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding  Path=ObiectInBinding.DenumireUtilitate, Mode=TwoWay}"></TextBox>
-            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding  Path=ObiectInBinding.UnitateMasura, Mode=TwoWay}" ></TextBox>
-            <TextBox Grid.Row="2" Name="txt" Grid.Column="1" InputScope="Number" Text="{Binding Path=ObiectInBinding.IndexInitial, Mode=TwoWay}"></TextBox>
-            <t:DatePicker Grid.Row="3" Grid.Column="1" Value="{Binding Path=ObiectInBinding.DataIndexInitial, Mode=TwoWay}" ></t:DatePicker>
+            <StackPanel Grid.Row="0" Orientation="Vertical">
+                <TextBlock Margin="10" Text="{Binding Path=LocalizedResources.lblUtitlitatiText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <TextBox  Text="{Binding  Path=ObiectInBinding.DenumireUtilitate, Mode=TwoWay}"></TextBox>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Orientation="Vertical">
+                <TextBlock Margin="10" Text="{Binding Path=LocalizedResources.lblUnitateDeMasuraText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <TextBox  Text="{Binding  Path=ObiectInBinding.UnitateMasura, Mode=TwoWay}" ></TextBox>
+            </StackPanel>
+            <StackPanel Grid.Row="2">
+                <TextBlock Margin="10" Text="{Binding Path=LocalizedResources.lblValoareInitialaText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <TextBox  Name="txt" InputScope="Number" Text="{Binding Path=ObiectInBinding.IndexInitial, Mode=TwoWay}"></TextBox>
+            </StackPanel>
+            <StackPanel Grid.Row="3" Orientation="Vertical">
+                <TextBlock Margin="10" Text="{Binding Path=LocalizedResources.lblDataIndexInitialText,Source={StaticResource LocalizedStrings}}"></TextBlock>
+                <t:DatePicker  Value="{Binding Path=ObiectInBinding.DataIndexInitial, Mode=TwoWay}" ></t:DatePicker>
+
+            </StackPanel>
             
         </Grid>
         <StackPanel Grid.Row="2">
